--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "isomorphic-fetch": "^3.0.0",
     "next": "^9.5.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "slug": "^3.3.4"
   }
 }
